// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingSpinner is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingSpinner testClass1 testClass2 css-zd4oi4-euiLoadingSpinner-m"
  data-test-subj="test subject string"
/>
`;

exports[`EuiLoadingSpinner size l is rendered 1`] = `
<span
  class="euiLoadingSpinner css-1dt7hjp-euiLoadingSpinner-l"
/>
`;

exports[`EuiLoadingSpinner size m is rendered 1`] = `
<span
  class="euiLoadingSpinner css-zd4oi4-euiLoadingSpinner-m"
/>
`;

exports[`EuiLoadingSpinner size s is rendered 1`] = `
<span
  class="euiLoadingSpinner css-1q21seb-euiLoadingSpinner-s"
/>
`;

exports[`EuiLoadingSpinner size xl is rendered 1`] = `
<span
  class="euiLoadingSpinner css-70jywc-euiLoadingSpinner-xl"
/>
`;

exports[`EuiLoadingSpinner size xxl is rendered 1`] = `
<span
  class="euiLoadingSpinner css-g4eahb-euiLoadingSpinner-xxl"
/>
`;
